Update about and index pages with new content

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section class="posts">
             <h2>Recent Posts</h2>
             <article>
-                <h3><a href="blog/post1.html">Post Title 1</a></h3>
+                <h3><a href="blog/post1.html">How to Create a Repository in GitHub?</a></h3>
             </article>
             <!-- Add more posts as needed -->
         </section>
