--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
     </header>
     <main>
         <section class="about">
-            <h2>Hi, I'm [Your Name]</h2>
-            <p>Welcome to my blog! I write about [topics you cover]...</p>
+            <h2>Hi, I'm Niranjana</h2>
+            <p>Welcome to my blog! I write about DevOps.</p>
         </section>
     </main>
     <footer>
